--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.12.2",
+    "dotenv": "^16.4.5",
     "hono": "^4.5.10",
     "playwright-core": "^1.46.1"
   },
